<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/donation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_help_development"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_traditional_methods"
            android:textSize="16sp"
            android:layout_marginBottom="16dp" />

        <!-- Botones de donación -->
        <LinearLayout
            android:id="@+id/donation_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="24dp">
            <ImageView
                android:id="@+id/img_paypal"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/paypal"
                android:padding="0dp" />
            <ImageView
                android:id="@+id/img_buymeacoffee"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/buymeacoffee"
                android:padding="0dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_crypto_methods"
            android:textSize="16sp"
            android:layout_marginBottom="16dp" />

        <!-- Las direcciones se agregarán dinámicamente aquí -->
    </LinearLayout>
</ScrollView>
